# jwt-auth-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: sonarcloud.yaml
postman/: jwt-auth-service.postman_collection.json
src/app/: exceptions.py  main.py  settings.py
src/database/: database.py  settings.py  tables.py
src/database/data/: db.sql  db_test.sql
src/exceptions/: access_groups.py  auth.py
src/router/: access_groups.py  auth.py
src/schema/: access_groups.py  auth.py  passw.py
src/service/: access_groups.py  auth.py  utils.py
tests/: conftest.py
tests/access_groups/: test_group_routers.py
tests/auth/: test_auth_routes.py
tests/main/: test_main_routes.py
