[project]
name = "jwt-auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "asgi-lifespan>=2.1.0",
    "cffi==2.0.0",
    "click==8.3.1",
    "cryptography==46.0.5",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.128.6",
    "freezegun>=1.5.5",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pwdlib==0.3.0",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydantic-super-model==1.1.4",
    "pygments==2.19.2",
    "pyjwt==2.11.0",
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.5.0",
    "python-dotenv==1.2.1",
    "python-generics==0.2.4",
    "pytz==2025.2",
    "respx>=0.22.0",
    "ruff==0.15.0",
    "setuptools==82.0.0",
    "sqlalchemy==2.0.46",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uv==0.10.4",
    "uvicorn==0.40.0",
    "vcrpy>=8.1.1",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  "."
]
testpaths = [
    "tests"
]
env = [
    "JWT_KEY=79300587-757a-43b1-b9bd-e8765695d94f",
    "JWT_VALID_TIME=5",
    "CONN_URL=sqlite+aiosqlite:///src/database/data/db_test.sql",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
